--- a/TiendaServicios.Api.Autor/appsettings.json
+++ b/TiendaServicios.Api.Autor/appsettings.json
@@ -1,7 +1,8 @@
-﻿{
+{
   "ConnectionStrings": {
-    "DataBaseConnection": "Server=localhost;Database=tienda_libro_autor;Port=5432;User Id=postgres;Password=admin;"
+    "ConexionDatabase": "Server=127.0.0.1;Database=tiendalibroautor;Port=5432;User Id=postgres;Password=tuPassword;"
   },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,4 +12,3 @@
   },
   "AllowedHosts": "*"
 }
-
