--- a/TiendaServicios.Api.Libro.Tests/TiendaServicios.Api.Libro.Tests.csproj
+++ b/TiendaServicios.Api.Libro.Tests/TiendaServicios.Api.Libro.Tests.csproj
@@ -1,33 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
 
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.1" />
-    <PackageReference Include="xunit" Version="2.4.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="3.1.2">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="Moq" Version="4.18.2" />
-    <PackageReference Include="GenFu" Version="1.6.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="GenFu" Version="1.6.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.6" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+		<PackageReference Include="Moq" Version="4.14.5" />
+		<PackageReference Include="NSubstitute" Version="4.2.2" />
+		<PackageReference Include="xunit" Version="2.4.0" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+		<PackageReference Include="coverlet.collector" Version="1.2.0" />
+	</ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TiendaServicios.Api.Libro\TiendaServicios.Api.Libro.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Remove="Moq" />
-    <None Remove="GenFu" />
   </ItemGroup>
 </Project>
