--- a/TiendaServicios.Api.Autor/Properties/launchSettings.json
+++ b/TiendaServicios.Api.Autor/Properties/launchSettings.json
@@ -20,17 +20,16 @@
     "TiendaServicios.Api.Autor": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/Autor",
+      "applicationUrl": "http://localhost:42383",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:8080"
+      }
     },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/Autor",
-      "publishAllPorts": true
+      "environmentVariables": {}
     }
   }
 }
