--- a/TiendaServicios.Api.Libro/Properties/launchSettings.json
+++ b/TiendaServicios.Api.Libro/Properties/launchSettings.json
@@ -1,5 +1,4 @@
 {
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -8,6 +7,7 @@
       "sslPort": 0
     }
   },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
@@ -20,10 +20,16 @@
     "TiendaServicios.Api.Libro": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:34480",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:34480"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/Libro",
+      "publishAllPorts": true
     }
   }
 }
