Commit final del curso

--- a/TiendaServicios.Api.Autor/appsettings.json
+++ b/TiendaServicios.Api.Autor/appsettings.json
@@ -9,6 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SendGrid": {
+    "ApiKey" :  ""
+  }
 }
 
