--- a/TiendaServicios.Api.Autor/TiendaServicios.Api.Autor.csproj
+++ b/TiendaServicios.Api.Autor/TiendaServicios.Api.Autor.csproj
@@ -22,4 +22,9 @@
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.2" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\TiendaServicios.RabbitMQ.Bus\TiendaServicios.RabbitMQ.Bus.csproj" />
+	  <ProjectReference Include="..\Tiendaservicios.Mensajeria.Email\Tiendaservicios.Mensajeria.Email.csproj" />
+	</ItemGroup>
 </Project>
